--- a/app/config/config_prod.yml
+++ b/app/config/config_prod.yml
@@ -17,3 +17,8 @@ monolog:
             type:  stream
             path:  %kernel.logs_dir%/%kernel.environment%.log
             level: debug
+
+swiftmailer:
+    transport: gmail
+    username:  jordi.dalmau@urvangreen.com
+    password:  p$g3m4lh0rt
