--- a/app/config/config_dev.yml
+++ b/app/config/config_dev.yml
@@ -13,7 +13,8 @@ monolog:
     handlers:
         main:
             type:  stream
-            path:  %kernel.logs_dir%/%kernel.environment%.log
+            #app/logs/dev.log
+            path:  %kernel.logs_dir%/%kernel.environment%.log 
             level: debug
         firephp:
             type:  firephp
